2011-11-27  KUBO Takehiro  <kubo@jiubao.org>
	* test/test_break.rb: fix test_timeout test for an Oracle server
	    on Windows.
	* test/test_all.rb, test/test_connection_pool.rb: add testcases
	    of OCI8::ConnectionPool.
	* test/test_oci8.rb: add a testcase for OCI8#last_error.
	* test/test_oranumber.rb: add a testcase for OCI8.properties[:float_conversion_type].

2011-11-26  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/object.c, test/test_object.rb: fix a bug that an array is
	   always bound as null. This bug was introduced in ruby-oci8 2.0.5.
	   (reported by Leoš Bitto)

2011-11-23  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.c, lib/oci8/oci8.rb, lib/oci8/ocihandle.rb,
	  test/test_connstr.rb: support sysasm privilege.
	    OCI8.new('username/password as sysasm')
	  or
	    OCI8.new('username', 'password', nil, :SYSASM)

2011-11-04  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/encoding.yml: fix the mapping from Oracle NLS chacacter set
	    to ruby encoding to use CP950 and CP951, which are new encodings
	    in ruby 1.9.3.

2011-11-04  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/ocinumber.c: add a workaround to avoid a gcc internal
	    compiler error when using ruby 1.9.2-p290 on ubuntu 11.10 (64bit).
	    (reported by Bob Saveland.)

2011-11-04  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb, ext/oci8/oci8.c, ext/oci8/oci8.h,
	  test/test_datetime.rb, test/test_metadata.rb: fix to pass tests
	    on Oracle 9i.

2011-10-29  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/error.c, ext/oci8/oci8.c, lib/oci8/object.rb, lib/oci8/oci8.rb:
	    reset OCI8#last_error when OCI8#parse or OCI8#exec is called.
	    fix bugs added by the last commit but one.

2011-10-29  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: use RbConfig::CONFIG instead of obsolete
	    Config::CONFIG.

2011-10-22  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/attr.c, ext/oci8/bind.c, ext/oci8/connection_pool.c,
	  ext/oci8/error.c, ext/oci8/lob.c, ext/oci8/metadata.c,