@@ -5,6 +5,25 @@
 #++
 
 class OCI8
+
+  # Connection pooling is the use of a group (the pool) of reusable
+  # physical connections by several sessions to balance loads.
+  # See: {Oracle Call Interface Manual}[http://docs.oracle.com/cd/E11882_01/appdev.112/e10646/oci09adv.htm#sthref1479]
+  #
+  # This is equivalent to Oracle JDBC Driver {OCI Connection Pooling}[http://docs.oracle.com/cd/E11882_01/java.112/e16548/ociconpl.htm#JJDBC28789].
+  #
+  # Usage:
+  #   # Create a connection pool.
+  #   # username and password are required to establish an implicit primary session.
+  #   cpool = OCI8::ConnectionPool.new(1, 5, 2, username, password, database)
+  #   
+  #   # Get a session from the pool.
+  #   # Pass the connection pool to the third argument.
+  #   conn1 = OCI8.new(username, password, cpool)
+  #   
+  #   # Get another session.
+  #   conn2 = OCI8.new(username, password, cpool)
+  #
   class ConnectionPool
 
     # call-seq:
@@ -54,7 +73,7 @@ class OCI8
     # call-seq:
     #   busy_count -> integer
     #
-    # Returns the number of busy connections.
+    # Returns the number of busy physical connections.
     def busy_count
       attr_get_ub4(OCI_ATTR_CONN_BUSY_COUNT)
     end
@@ -62,7 +81,7 @@ class OCI8
     # call-seq:
     #   open_count -> integer
     #
-    # Returns the number of open connections.
+    # Returns the number of open physical connections.
     def open_count
       attr_get_ub4(OCI_ATTR_CONN_OPEN_COUNT)
     end
@@ -70,7 +89,7 @@ class OCI8
     # call-seq:
     #   min -> integer
     #
-    # Returns the number of minimum connections.
+    # Returns the number of minimum physical connections.
     def min
       attr_get_ub4(OCI_ATTR_CONN_MIN)
     end
@@ -78,7 +97,7 @@ class OCI8
     # call-seq:
     #   max -> integer
     #
-    # Returns the number of maximum connections.
+    # Returns the number of maximum physical connections.
     def max
       attr_get_ub4(OCI_ATTR_CONN_MAX)
     end
